Added mysql2 dependency

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+.vscode
+node_modules
+package-lock.json
+
+api/extensions/*
+tests/manual
+
 *.log
 log.txt
-node_modules/
-package-lock.json
-.vscode
-tests/manual
+
 _*
