--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "knex": "^0.95.11",
         "lodash": "^4.17.21",
         "mysql": "^2.18.1",
+        "mysql2": "^2.3.3",
         "progress": "^2.0.3",
         "request": "^2.88.2",
         "when": "^3.7.8",
