--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,13 @@
 node_modules
 package-lock.json
 
-api/extensions/*
-
 *.log
 log.txt
 
 _*
+
+api/extensions/*
+config/server-config.js
+config/database-config.js
+tests/config/server-config.js
+tests/config/database-config.js
