--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
     "name": "wing-cms-api",
-    "version": "0.1.2-beta",
+    "version": "0.2.0-beta",
     "description": "Headless CMS",
+    "author": "Patrick Bauer <patrick.bauer@pb-it.at>",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/pb-it/wing-cms-api"
+    },
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
@@ -13,13 +19,12 @@
         "test-relations": "jest tests/relations.test.js",
         "lint": "eslint src/js"
     },
-    "author": "Patrick Bauer",
-    "license": "MIT",
     "dependencies": {
         "axios": "^0.21.4",
         "body-parser": "^1.19.0",
         "bookshelf": "^1.2.0",
         "cors": "^2.8.5",
+        "eval": "^0.1.8",
         "express": "^4.17.1",
         "fluent-ffmpeg": "^2.1.2",
         "jsdom": "^19.0.0",
