--- a/package.json
+++ b/package.json
@@ -1,45 +1,41 @@
 {
-  "name": "wing-cms-api",
-  "version": "0.2.0-beta",
-  "description": "Headless CMS",
-  "author": "Patrick Bauer <patrick.bauer@pb-it.at>",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pb-it/wing-cms-api"
-  },
-  "engines": {
-    "node": ">=12"
-  },
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "start-unix-prod": "export NODE_ENV=production&& node --max_old_space_size=8192 server.js",
-    "start-win-prod": "set NODE_ENV=production&& node --max_old_space_size=8192 server.js",
-    "start-unix-dev": "node --max_old_space_size=8192 server.js",
-    "start-win-dev": "set NODE_ENV=development&& node --max_old_space_size=8192 server.js",
-    "test": "jest tests/common.test.js",
-    "test-relations": "jest tests/relations.test.js",
-    "lint": "eslint src/js"
-  },
-  "dependencies": {
-    "axios": "^0.21.4",
-    "body-parser": "^1.19.0",
-    "bookshelf": "^1.2.0",
-    "cors": "^2.8.5",
-    "eval": "^0.1.8",
-    "express": "^4.17.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "jsdom": "^19.0.0",
-    "knex": "^0.95.11",
-    "mysql": "^2.18.1",
-    "mysql2": "^2.3.3",
-    "progress": "^2.0.3",
-    "ytdl-core": "^4.11.0",
-    "ytdl-core-muxer": "^1.0.1"
-  },
-  "devDependencies": {
-    "eslint": "^7.32.0",
-    "jest": "^27.5.1"
-  }
+    "name": "wing-cms-api",
+    "version": "0.2.0-beta",
+    "description": "Headless CMS",
+    "author": "Patrick Bauer <patrick.bauer@pb-it.at>",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/pb-it/wing-cms-api"
+    },
+    "engines": {
+        "node": ">=12"
+    },
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js",
+        "start-unix-prod": "export NODE_ENV=production&& node --max_old_space_size=8192 server.js",
+        "start-win-prod": "set NODE_ENV=production&& node --max_old_space_size=8192 server.js",
+        "start-unix-dev": "node --max_old_space_size=8192 server.js",
+        "start-win-dev": "set NODE_ENV=development&& node --max_old_space_size=8192 server.js",
+        "test": "jest tests/common.test.js",
+        "test-relations": "jest tests/relations.test.js",
+        "lint": "eslint src/js"
+    },
+    "dependencies": {
+        "axios": "^0.21.4",
+        "body-parser": "^1.19.0",
+        "bookshelf": "^1.2.0",
+        "cors": "^2.8.5",
+        "eval": "^0.1.8",
+        "express": "^4.17.1",
+        "jsdom": "^19.0.0",
+        "knex": "^0.95.11",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.3.3"
+    },
+    "devDependencies": {
+        "eslint": "^7.32.0",
+        "jest": "^27.5.1"
+    }
 }
