--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ package-lock.json
 
 config/server-config.js
 config/database-config.js
+config/cdn-config.js
+
 tests/config/server-config.js
 tests/config/database-config.js
 
