--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "start-win-dev": "set NODE_ENV=development&& node --max_old_space_size=8192 server.js",
         "test": "jest --runInBand tests",
         "test-relations": "jest tests/relations.test.js",
+        "test-extensions": "jest tests/extensions.test.js",
         "lint": "eslint src/js"
     },
     "dependencies": {
@@ -37,14 +38,9 @@
         "cors": "^2.8.5",
         "eval": "^0.1.8",
         "express": "^4.17.1",
-        "fluent-ffmpeg": "^2.1.2",
-        "jsdom": "^20.0.0",
         "knex": "^0.95.11",
         "mysql": "^2.18.1",
-        "mysql2": "^2.3.3",
-        "progress": "^2.0.3",
-        "ytdl-core": "github:GreepTheSheep/node-ytdl-core",
-        "ytdl-core-muxer": "^1.0.1"
+        "mysql2": "^2.3.3"
     },
     "devDependencies": {
         "eslint": "^7.32.0",
