--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "start-unix-dev": "node --max_old_space_size=8192 server.js",
         "start-win-dev": "set NODE_ENV=development&& node --max_old_space_size=8192 server.js",
         "test": "jest --runInBand tests",
+        "test-common": "jest tests/common.test.js",
         "test-relations": "jest tests/relations.test.js",
         "test-extensions": "jest tests/extensions.test.js",
         "lint": "eslint src/js"
