--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wing-cms-api",
-    "version": "0.3.0-beta",
+    "version": "0.3.2-beta",
     "description": "Headless CMS",
     "keywords": [
         "CMS",
@@ -39,6 +39,7 @@
         "cors": "^2.8.5",
         "eval": "^0.1.8",
         "express": "^4.17.1",
+        "express-session": "^1.17.3",
         "knex": "^0.95.11",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3"
