--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
         "body-parser": "^1.19.0",
         "bookshelf": "^1.2.0",
         "cors": "^2.8.5",
+        "cross-fetch": "^3.1.5",
         "eval": "^0.1.8",
         "express": "^4.17.1",
         "express-session": "^1.17.3",
         "knex": "^0.95.11",
         "mysql": "^2.18.1",
-        "mysql2": "^2.3.3",
-        "node-fetch": "^3.3.0"
+        "mysql2": "^2.3.3"
     },
     "devDependencies": {
         "eslint": "^7.32.0",
