--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wing-cms-api",
-    "version": "0.4.0-beta",
+    "version": "0.4.1-beta",
     "description": "Headless CMS",
     "keywords": [
         "CMS",
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "axios": "^0.21.4",
+        "bcrypt": "^5.1.0",
         "body-parser": "^1.19.0",
         "bookshelf": "^1.2.0",
         "cors": "^2.8.5",
@@ -41,7 +42,7 @@
         "eval": "^0.1.8",
         "express": "^4.17.1",
         "express-session": "^1.17.3",
-        "knex": "^0.95.11",
+        "knex": "^2.4.2",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3"
     },
