--- a/package.json
+++ b/package.json
@@ -42,9 +42,14 @@
         "eval": "^0.1.8",
         "express": "^4.17.1",
         "express-session": "^1.17.3",
+        "fluent-ffmpeg": "^2.1.2",
+        "jsdom": "^21.1.0",
         "knex": "^2.4.2",
         "mysql": "^2.18.1",
-        "mysql2": "^2.3.3"
+        "mysql2": "^2.3.3",
+        "progress": "^2.0.3",
+        "ytdl-core": "github:GreepTheSheep/node-ytdl-core",
+        "ytdl-core-muxer": "^1.0.1"
     },
     "devDependencies": {
         "eslint": "^7.32.0",
