--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "cross-fetch": "^3.1.5",
         "eval": "^0.1.8",
         "express": "^4.17.1",
-        "express-formidable": "^1.2.0",
+        "express-form-data": "^2.0.22",
         "express-session": "^1.17.3",
         "knex": "^2.4.2",
         "mysql": "^2.18.1",
