--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wing-cms-api",
-    "version": "0.4.5-beta",
+    "version": "0.5.0-beta",
     "description": "Headless CMS",
     "keywords": [
         "CMS",
@@ -19,13 +19,13 @@
     "engines": {
         "node": ">=12"
     },
-    "main": "server.js",
+    "main": "index.js",
     "scripts": {
-        "start": "node server.js",
-        "start-unix-prod": "export NODE_ENV=production&& node --max_old_space_size=8192 server.js",
-        "start-win-prod": "set NODE_ENV=production&& node --max_old_space_size=8192 server.js",
-        "start-unix-dev": "node --max_old_space_size=8192 server.js",
-        "start-win-dev": "set NODE_ENV=development&& node --max_old_space_size=8192 server.js",
+        "start": "node index.js",
+        "start-unix-prod": "export NODE_ENV=production&& node --max_old_space_size=8192 index.js",
+        "start-win-prod": "set NODE_ENV=production&& node --max_old_space_size=8192 index.js",
+        "start-unix-dev": "node --max_old_space_size=8192 index.js",
+        "start-win-dev": "set NODE_ENV=development&& node --max_old_space_size=8192 index.js",
         "test": "jest --runInBand ./tests/common.test.js ./tests/relations.test.js",
         "test-common": "jest tests/common.test.js",
         "test-relations": "jest tests/relations.test.js",
