--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wing-cms-api",
-    "version": "0.5.4-beta",
+    "version": "0.5.5-beta",
     "description": "Headless CMS",
     "keywords": [
         "CMS",
@@ -22,10 +22,13 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "start-unix-prod": "export NODE_ENV=production&& node --max_old_space_size=8192 index.js",
-        "start-win-prod": "set NODE_ENV=production&& node --max_old_space_size=8192 index.js",
         "start-unix-dev": "node --max_old_space_size=8192 index.js",
+        "start-unix-prod": "export NODE_ENV=production&& node --max_old_space_size=8192 index.js",
         "start-win-dev": "set NODE_ENV=development&& node --max_old_space_size=8192 index.js",
+        "start-win-prod": "set NODE_ENV=production&& node --max_old_space_size=8192 index.js",
+        "debug-http": "export NODE_DEBUG=http,http2&& node --max_old_space_size=8192 index.js",
+        "debug-app": "export DEBUG=app:*&& node --max_old_space_size=8192 index.js",
+        "debug-knex": "export DEBUG=knex:query&& node --max_old_space_size=8192 index.js",
         "test": "jest --runInBand ./tests/common.test.js ./tests/relations.test.js ./tests/search.test.js ./tests/eval.test.js",
         "test-common": "jest tests/common.test.js",
         "test-relations": "jest tests/relations.test.js",
@@ -36,7 +39,7 @@
         "lint": "eslint src/js"
     },
     "dependencies": {
-        "axios": "^0.21.4",
+        "axios": "^1.6.1",
         "bcrypt": "^5.1.0",
         "bookshelf": "^1.2.0",
         "cors": "^2.8.5",
@@ -49,6 +52,8 @@
         "knex": "^2.4.2",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3",
+        "socket.io": "^4.7.2",
+        "ssl-root-cas": "^1.3.1",
         "unzipper": "^0.10.11"
     },
     "devDependencies": {
