--- a/package.json
+++ b/package.json
@@ -22,39 +22,39 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "start-unix-dev": "node --max_old_space_size=8192 index.js",
-        "start-unix-prod": "export NODE_ENV=production&& node --max_old_space_size=8192 index.js",
-        "start-win-dev": "set NODE_ENV=development&& node --max_old_space_size=8192 index.js",
-        "start-win-prod": "set NODE_ENV=production&& node --max_old_space_size=8192 index.js",
-        "debug-http": "export NODE_DEBUG=http,http2&& node --max_old_space_size=8192 index.js",
-        "debug-app": "export DEBUG=app:*&& node --max_old_space_size=8192 index.js",
-        "debug-knex": "export DEBUG=knex:query&& node --max_old_space_size=8192 index.js",
-        "test": "jest --runInBand ./tests/common.test.js ./tests/relations.test.js ./tests/search.test.js ./tests/eval.test.js",
-        "test-common": "jest tests/common.test.js",
-        "test-relations": "jest tests/relations.test.js",
-        "test-extensions": "jest tests/extensions.test.js",
-        "test-search": "jest tests/search.test.js",
-        "test-delete": "jest tests/delete.test.js",
-        "test-eval": "jest tests/eval.test.js",
+        "start:unix:dev": "node --max_old_space_size=8192 index.js",
+        "start:unix:prod": "export NODE_ENV=production&& node --max_old_space_size=8192 index.js",
+        "start:win:dev": "set NODE_ENV=development&& node --max_old_space_size=8192 index.js",
+        "start:win:prod": "set NODE_ENV=production&& node --max_old_space_size=8192 index.js",
+        "debug:http": "export NODE_DEBUG=http,http2&& node --max_old_space_size=8192 index.js",
+        "debug:app": "export DEBUG=app:*&& node --max_old_space_size=8192 index.js",
+        "debug:knex": "export DEBUG=knex:query&& node --max_old_space_size=8192 index.js",
+        "test": "jest --runInBand ./tests/common.test.js ./tests/relations.test.js ./tests/search.test.js ./tests/delete.test.js ./tests/eval.test.js",
+        "test:common": "jest tests/common.test.js",
+        "test:relations": "jest tests/relations.test.js",
+        "test:extensions": "jest tests/extensions.test.js",
+        "test:search": "jest tests/search.test.js",
+        "test:delete": "jest tests/delete.test.js",
+        "test:eval": "jest tests/eval.test.js",
         "lint": "eslint src/js"
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
         "bookshelf": "^1.2.0",
         "cors": "^2.8.5",
-        "cross-fetch": "^3.1.8",
+        "cross-fetch": "^4.0.0",
         "ejs": "^3.1.9",
         "eval": "^0.1.8",
         "express": "^4.18.2",
         "express-form-data": "^2.0.22",
         "express-session": "^1.17.3",
-        "knex": "^2.5.1",
+        "knex": "^3.0.1",
         "mysql": "^2.18.1",
-        "mysql2": "^2.3.3",
+        "mysql2": "^3.6.3",
         "unzipper": "^0.10.14"
     },
     "devDependencies": {
-        "eslint": "^7.32.0",
-        "jest": "^27.5.1"
+        "eslint": "^8.53.0",
+        "jest": "^29.7.0"
     }
 }
