--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "wing-cms-api",
-    "version": "0.5.7-beta",
+    "name": "ark-cms-api",
+    "version": "0.6.0-beta",
     "description": "Headless CMS",
     "keywords": [
         "CMS",
@@ -14,7 +14,7 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/pb-it/wing-cms-api"
+        "url": "https://github.com/pb-it/ark-cms-api"
     },
     "engines": {
         "node": ">=12"
@@ -41,6 +41,9 @@
         "lint": "eslint src/js"
     },
     "dependencies": {
+        "@esm2cjs/cacheable-lookup": "^7.0.0",
+        "add-dependencies": "^1.1.0",
+        "axios": "^1.6.5",
         "bcrypt": "^5.1.1",
         "bookshelf": "^1.2.0",
         "cors": "^2.8.5",
@@ -50,10 +53,16 @@
         "express": "^4.18.2",
         "express-form-data": "^2.0.22",
         "express-session": "^1.17.3",
+        "flatted": "^3.2.9",
+        "jsdom": "^23.2.0",
         "knex": "^3.0.1",
         "mysql": "^2.18.1",
         "mysql2": "^3.6.4",
-        "unzipper": "^0.10.14"
+        "progress": "^2.0.3",
+        "socket.io": "^4.7.3",
+        "ssl-root-cas": "^1.3.1",
+        "unzipper": "^0.10.14",
+        "ytdl-core": "^4.11.5"
     },
     "devDependencies": {
         "eslint": "^8.54.0",
