--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "debug:http": "export NODE_DEBUG=http,http2&& node --max_old_space_size=8192 index.js",
         "debug:app": "export DEBUG=app:*&& node --max_old_space_size=8192 index.js",
         "debug:knex": "export DEBUG=knex:query&& node --max_old_space_size=8192 index.js",
-        "test": "jest --runInBand ./tests/common.test.js ./tests/relations.test.js ./tests/read.test.js ./tests/search.test.js ./tests/delete.test.js ./tests/eval.test.js ./tests/misc.test.js",
+        "test": "jest ./tests/root.test.js",
         "test:common": "jest tests/common.test.js",
         "test:relations": "jest tests/relations.test.js",
         "test:extensions": "jest tests/extensions.test.js",
@@ -41,9 +41,6 @@
         "lint": "eslint src/js"
     },
     "dependencies": {
-        "@esm2cjs/cacheable-lookup": "^7.0.0",
-        "add-dependencies": "^1.1.0",
-        "axios": "^1.6.7",
         "bcrypt": "^5.1.1",
         "bookshelf": "^1.2.0",
         "cors": "^2.8.5",
@@ -53,16 +50,10 @@
         "express": "^4.18.2",
         "express-form-data": "^2.0.23",
         "express-session": "^1.18.0",
-        "flatted": "^3.2.9",
-        "jsdom": "^23.2.0",
         "knex": "^3.1.0",
         "mysql": "^2.18.1",
         "mysql2": "^3.9.1",
-        "progress": "^2.0.3",
-        "socket.io": "^4.7.4",
-        "ssl-root-cas": "^1.3.1",
-        "unzipper": "^0.10.14",
-        "ytdl-core": "^4.11.5"
+        "unzipper": "^0.10.14"
     },
     "devDependencies": {
         "eslint": "^8.56.0",
