--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "debug:knex": "export DEBUG=knex:query&& node --max_old_space_size=8192 index.js",
         "test": "jest --config ./tests/config/jest.config.js -i ./root.test.js",
         "test2": "jest --setupFiles ./tests/config/setup-env2.js -i ./tests/root.test.js --forceExit",
+        "test:datatypes": "jest tests/datatypes.test.js",
         "test:common": "jest tests/common.test.js",
         "test:relations": "jest tests/relations.test.js",
         "test:extensions": "jest tests/extensions.test.js",
@@ -48,17 +49,17 @@
         "cross-fetch": "^4.0.0",
         "ejs": "^3.1.9",
         "eval": "^0.1.8",
-        "express": "^4.18.2",
+        "express": "^4.18.3",
         "express-form-data": "^2.0.23",
         "express-session": "^1.18.0",
         "knex": "^3.1.0",
         "mysql": "^2.18.1",
-        "mysql2": "^3.9.1",
+        "mysql2": "^3.9.2",
         "unzipper": "^0.10.14"
     },
     "devDependencies": {
         "dotenv": "^16.4.5",
-        "eslint": "^8.56.0",
+        "eslint": "^8.57.0",
         "jest": "^29.7.0"
     }
 }
