:sparkles: Small enhancements

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,7 @@ tests/config/server-config.js
 tests/config/database-config.js
 tests/config/test-config.js
 
+forever.config.json
+.foreverignore
+
 _*
