:sparkles: Small enhancements

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "test:read": "jest tests/read.test.js",
         "test:search": "jest tests/search.test.js",
         "test:delete": "jest tests/delete.test.js",
+        "test:backup": "jest tests/backup.test.js",
         "test:eval": "jest tests/eval.test.js",
         "test:misc": "jest tests/misc.test.js",
         "lint": "eslint src/js"
