--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ark-cms-api",
-    "version": "0.6.8-beta",
+    "version": "0.7.0-beta",
     "description": "Headless CMS",
     "keywords": [
         "CMS",
@@ -59,6 +59,7 @@
         "knex": "^3.1.0",
         "mysql": "^2.18.1",
         "mysql2": "^3.11.0",
+        "semver": "^7.6.3",
         "unzipper": "^0.11.6"
     },
     "devDependencies": {
